test/tests/language/expr/escape/basic/invalid_sequence.txt
error: invalid unicode escape sequence
 --> tests/language/expr/escape/basic/invalid_sequence.tql:6:7
  |
6 |   x: "\U0000123_",
  |       ^^^^^^^^^^ 
  |
